--- a/src/app/MyComponents/todos/todos.component.html
+++ b/src/app/MyComponents/todos/todos.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <h1 class="text-center mb-3">Today's ToDo List</h1>
     <app-add-todo (todoAdd)="addTodo($event)"></app-add-todo>
     <h4>Your Todos</h4>
@@ -9,4 +9,99 @@
             </app-todo-item>
         </div>
     </ng-template>
+</div> -->
+
+<div class="container-fluid">
+    <div class="row">
+        <div style="background: linear-gradient(to left, #7e51a6, #6999cd); height: 93vh;" class="col-md-3">
+            <div>
+                <mat-card class="mt-3">
+                    <form [formGroup]="todoForm">
+                        <mat-form-field appearance="outline">
+                            <mat-label>Task Name</mat-label>
+                            <input formControlName="item" matInput placeholder="Enter Task Name">
+                            <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+                            
+                        </mat-form-field>
+                        <button *ngIf="!isEditEnabled" (click)="addTask()" mat-raised-button [disabled]="todoForm.invalid" color="primary">Add Task</button>
+                        <!-- <button *ngIf="isEditEnabled" (click)="updateTodoTask()" mat-raised-button [disabled]="todoForm.invalid" color="primary">Update Task</button> -->
+                        <!-- <button *ngIf="isEditEnabled" (click)="updateInProgressTask()" mat-raised-button [disabled]="todoForm.invalid" color="primary">Update InProgress Task</button> -->
+
+                    </form>
+                </mat-card>
+            </div>
+
+        </div>
+        <div class="col-md-9 mt-3">
+            <div cdkDropListGroup>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="example-container">
+                            <h2 class="head-title">To Do</h2>
+                            <div cdkDropList [cdkDropListData]="tasks" class="example-list"
+                                (cdkDropListDropped)="drop($event)">
+                                <div class="example-todo-box" *ngFor="let item of tasks let i = index" cdkDrag>
+                                    <p *ngIf="!item.editMode" >{{item.description}}</p>
+
+                                    <div *ngIf="item.editMode">
+                                        <form #f="ngForm" (ngSubmit)="updateTodoTask(f, item)">
+                                            <input name="desc" ngModel #desc="ngModel" placeholder="Enter Task Name">                                                
+                                            <button type="submit" mat-raised-button color="primary">Update Task</button>
+                                            <!-- <mat-form-field appearance="outline">
+                                                <mat-label>Task Name</mat-label>
+                                            </mat-form-field> -->
+                    
+                                        </form>
+
+                                        <!-- <mat-form-field appearance="outline">
+                                            <mat-label>Task Name</mat-label>
+                                            <input [(ngModel)]="item.description" matInput placeholder="Enter Task Name">                                                
+                                        </mat-form-field>
+                                        <button (click)="updateTodoTask(item)" mat-raised-button color="primary">Update Task</button> -->
+    
+                                    </div>
+                                    
+                                    <div class="box">
+                                        <button mat-icon-button color="warn" (click)="deleteTask(i)"><mat-icon>delete</mat-icon></button>
+                                        <button mat-icon-button color="primary" (click)="onEditTodoTask(item, i)"><mat-icon>edit</mat-icon></button>
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="example-container">
+                            <h2 class="head-title">In Progress</h2>
+                            <div cdkDropList [cdkDropListData]="inprogress" class="example-list"
+                                (cdkDropListDropped)="drop($event)">
+                                <div class="example-inprogress-box" *ngFor="let item of inprogress let i = index" cdkDrag>{{item.description}}
+                                    <div class="box">
+                                        <button mat-icon-button color="warn" (click)="deleteInProgressTask(i)"><mat-icon>delete</mat-icon></button>
+                                        <!-- <button mat-icon-button color="primary" (click)="onEditInProgressTask(item, i)"><mat-icon>edit</mat-icon></button> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="example-container">
+                            <h2 class="head-title">Done</h2>
+                            <div cdkDropList [cdkDropListData]="done" class="example-list"
+                                (cdkDropListDropped)="drop($event)">
+                                <div class="example-done-box" *ngFor="let item of done let i = index" cdkDrag>{{item.description}}
+                                    <div class="box">
+                                        <button mat-icon-button color="warn" (click)="deleteDoneTask(i)"><mat-icon>delete</mat-icon></button>
+                                        <button mat-icon-button color="accent"><mat-icon>check_circle</mat-icon></button>
+                                    </div>  
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 </div>
